--- a/public/css/pages/dashboard.css
+++ b/public/css/pages/dashboard.css
@@ -47,7 +47,6 @@ summary {
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 32px;
   padding: 5px;
   color: var(--message-text-color);
   font-family: var(--font-quicksand-reg);
